# ez-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _clang-format  conanfile.py  conanfile.txt  patch.txt
cmake/: all.cmake  build.cmake  compiler.cmake  conan.cmake  dependencies.cmake  lib.cmake  library.cmake  modules.cmake  sanitizers.cmake
cmake/sanitizers/: FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake
scripts/: main.py  perf.sh  valgrind.sh
src/apps/: CMakeLists.txt
src/apps/algo/: CMakeLists.txt  main.cpp  overlapping_intervals.cpp  random.hpp  sort.cpp
src/apps/cl/: main.cpp
src/apps/experiments/: CMakeLists.txt
src/apps/experiments/algo/: CMakeLists.txt  alien_dict.cpp  k_majority_elements.cpp  k_nearest_neighbors.cpp  majority_element.cpp  odd_even_tree.cpp  prefix_pairs.cpp  rotate_array.cpp  shortest_path.cpp  simd.cpp  stl.cpp
src/apps/experiments/cl/: CMakeLists.txt
src/apps/experiments/grpc/: client.cpp  server.cpp
src/apps/experiments/leetcode/: formatters.hpp  jump_game.cpp  merge_sorted_array.cpp
src/apps/experiments/net/: CMakeLists.txt  Types.hpp
src/apps/flow/: CMakeLists.txt  Extensions.hpp  extensions.hpp  main.cpp
src/apps/grpc/: CMakeLists.txt  service.proto
src/apps/leetcode/: CMakeLists.txt  jump_game.cpp  majority_element.cpp  max_profit.cpp  merge_sorted_array.cpp  remove_duplicates_from_sorted_array.cpp  remove_element.cpp  rotate_array.cpp  stl.cpp
src/apps/net/: CMakeLists.txt  Http.hpp  Operations.hpp  Tcp.hpp  Types.hpp  Websockets.hpp  main.cpp
src/experiments/: CMakeLists.txt
src/experiments/algo/: CMakeLists.txt  main.cpp
src/experiments/flow/: CMakeLists.txt  extensions.hpp  main.cpp
src/experiments/simd/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/0template/: CMakeLists.txt
src/libs/0template/headers/ez/foo/: foo.hpp
src/libs/0template/tests/: CMakeLists.txt  tst_foo.cpp
src/libs/async/: CMakeLists.txt  README.md
src/libs/async/headers/ez/async/: All.hpp  Delay.hpp  Executor.hpp  Operation.hpp  Race.hpp  Receiver.hpp  Schedule.hpp  (+19 more)
src/libs/async/src/: Executor.cpp  executor.cpp
src/libs/async/tests/: CMakeLists.txt  main.cpp  tst_Receiver.cpp  tst_async.cpp  tst_receiver.cpp
src/libs/async/tests/qadapters/: QExecutor.hpp
src/libs/core/: CMakeLists.txt  README.md
src/libs/core/headers/ez/: Atomic.hpp  Box.hpp  ByteArray.hpp  Compiler.hpp  Contract.hpp  Cow.hpp  Enum.hpp  Error.hpp  ExecutionReport.hpp  Flags.hpp  ForConstexpr.hpp  Functional.hpp  Lambda.hpp  Logger.hpp  Meta.hpp  Mixin.hpp  NamedArgument.hpp  OneOf.hpp  Option.hpp  Os.hpp  Overload.hpp  Preprocessor.hpp  Print.hpp  Resource.hpp  Result.hpp  ScopeGuard.hpp  Shared.hpp  StrongType.hpp  TaskHandle.hpp  Time.hpp  Trait.hpp  Traits.hpp  Try.hpp  Tuple.hpp  TypeUtils.hpp  Utils.hpp  ValueWrapper.hpp  atomic.hpp  box.hpp  compiler.hpp  (+13 more)
src/libs/core/lib/: Box.cxx  CMakeLists.txt  Cow.cxx  Enum.cxx  Result.cxx  lib.cxx
src/libs/core/lib/src/: overload.cpp
src/libs/core/src/: Contract.cpp  TaskHandle.cpp
src/libs/core/src/reporting/: ExecutionReport.cpp  ExecutionStatusGuard.cpp
src/libs/core/tests/: CMakeLists.txt  lib.cpp  main.cpp  overload.cpp  tst_Async.cpp  tst_AsyncSchedule.cpp  tst_Atomic.cpp  tst_Box.cpp  tst_ByteArray.cpp  tst_Contract.cpp  tst_Cow.cpp  tst_Enum.cpp  tst_Error.cpp  tst_ExecutionReport.cpp  tst_Flags.cpp  tst_ForConstexpr.cpp  tst_Functional.cpp  tst_Lambda.cpp  tst_OneOf.cpp  tst_Receiver.cpp  tst_Result.cpp  tst_Rpl.cpp  tst_ScopeGuard.cpp  tst_Shared.cpp  tst_StrongType.cpp  tst_Trait.cpp  tst_Traits.cpp  tst_Tuple.cpp  tst_TypeUtils.cpp  tst_Utils.cpp  tst_cow.cpp  tst_for_constexpr.cpp  tst_meta.cpp  tst_result.cpp  tst_scope_guard.cpp  tst_strong_type.cpp  tst_trait.cpp  tst_tuple.cpp  tst_utils.cpp
src/libs/core/tests/async/: tst_Receiver.cpp  tst_async.cpp
src/libs/core/tests/async/qadapters/: QDelay.hpp
src/libs/core/tests/qadapters/: QDelay.hpp
src/libs/flow/: CMakeLists.txt
src/libs/flow/datasets/: desktop_app_uninstall.nfl  example.nfl  simple.nfl
src/libs/flow/datasets/examples/: 01_syntax_tour.nfl  02_app_uninstall.nfl  02_app_uninstall.xml  03_app_uninstall.nfl  04_scheduled_ra.nfl  07_instanced_scheduled_ra.nfl
src/libs/flow/datasets/scripts/: append_to_log.sh
src/libs/flow/datasets/tests/: instanced.nfl
src/libs/flow/src/engine/: Engine.cpp  engine.cpp
src/libs/flow/src/exporter/: Exporter.cpp  exporter.cpp
src/libs/flow/src/parser/: Annotations.hpp  AstAdapted.hpp  Debug.hpp  GenericParser.hpp  Parser.cpp  X3.hpp  annotations.hpp  ast_adapted.hpp  debug.hpp  generic_parser.hpp  parser.cpp  x3_traits.hpp
src/libs/flow/tests/: CMakeLists.txt  tst_parser.cpp
src/libs/io/: CMakeLists.txt
src/libs/io/tests/: CMakeLists.txt  tst_io.cpp
src/libs/net/: CMakeLists.txt
src/libs/net/tests/: CMakeLists.txt  tst_net.cpp
src/libs/rpc/: CMakeLists.txt  README.md
src/libs/rpc/headers/ez/rpc/: Function.hpp  FunctionUtils.hpp  RemoteService.hpp  Schema.hpp  Serializer.hpp  Service.hpp  Transport.hpp  Types.hpp  function.hpp  function_utils.hpp  messages.hpp  remote_service.hpp  schema.hpp  serializer.hpp  service.hpp  trait.hpp  transport.hpp  types.hpp
src/libs/rpc/protobuf/: messages.proto
src/libs/rpc/src/: Function.cpp  RemoteService.cpp  Serializer.cpp  Service.cpp  function.cpp  messages.cpp  remote_service.cpp  serializer.cpp  service.cpp
src/libs/rpc/tests/: CMakeLists.txt  tst_Serializer.cpp  tst_rpc.cpp  tst_serializer.cpp
src2/: CMakeLists.txt
src2/libs/: CMakeLists.txt
src2/libs/0template/: CMakeLists.txt
src2/libs/async/: CMakeLists.txt
src2/libs/async/tests/: CMakeLists.txt
src2/libs/core/headers/ez/: Atomic.hpp  for_constexpr.hpp  option.hpp  tuple.hpp
src2/libs/core/tests/: CMakeLists.txt  main.cpp  tst_shared.cpp
src2/libs/flow/datasets/examples/: 05_scheduled_campaigns.nfl  06_modules.nfl
src2/libs/flow/src/engine/: engine.cpp
src2/libs/flow/src/exporter/: exporter.cpp
src2/libs/flow/src/parser/: debug.hpp  x3_traits.hpp
src2/libs/flow/tests/: tst_parser.cpp
(+227 files in other folders)
